--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -6,3 +6,23 @@ body{
   background-image: url ('./img/img.jpg');
   background-size: cover;
 }
+
+.app {
+  max-width: 600px;
+  margin: 0 auto 300px;
+  background-color: #efefef;
+  pad: 20px 30px;
+  border-radius: 10px;
+}
+h1{
+  text-align: center;
+}
+h2{
+  margin-bottom: 10px;
+}
+p {
+  margin: 10px 0;
+}
+input{
+  box-sizing: border-box;
+}
